<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/pad_size"
        android:background="@drawable/round_corners">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/createUser"
                android:padding="@dimen/pad_size"
                android:textSize="@dimen/pad_size" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:id="@+id/first_name"
                android:padding="@dimen/pad_size" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:id="@+id/last_name"
                android:padding="@dimen/pad_size" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/other_name"
                android:id="@+id/other_name"
                android:padding="@dimen/pad_size" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:id="@+id/phone_number"
                android:inputType="number"
                android:padding="@dimen/pad_size" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_number"
                android:id="@+id/national_id"
                android:inputType="number"
                android:padding="@dimen/pad_size" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_birth"
                android:id="@+id/date_of_birth"
                android:padding="@dimen/pad_size" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/pad_size"
                android:text="@string/create_account"
                android:background="@drawable/green_login_round"
                android:id="@+id/create_accont_button" />

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/login_01"-->
<!--                android:layout_marginTop="@dimen/pad_size"-->
<!--                android:layout_marginLeft="@dimen/pad_size"-->
<!--                android:onClick="goToLogin"/>-->


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>