<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/pad_size">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_corners"
            android:orientation="vertical"
            android:padding="@dimen/pad_size">

            <TextView
                android:id="@+id/welcome_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/pad_size"
                android:text="@string/welcome"
                android:textSize="@dimen/pad_size" />

            <EditText
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="number"
                android:padding="@dimen/pad_size" />

            <EditText
                android:id="@+id/user_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:padding="@dimen/pad_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:onClick="resetPassword"
                android:padding="@dimen/pad_size"
                android:text="@string/forgotpass"
                android:textColor="@color/link"
                android:textSize="@dimen/pad_size" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_login_round"
                android:padding="@dimen/pad_size"
                android:text="@string/login" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/sign_up_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="signUp"
                    android:padding="@dimen/pad_size"
                    android:text="@string/newUser"
                    android:textSize="@dimen/pad_size"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_toRightOf="@id/sign_up_button"
                    android:onClick="goToTerms"
                    android:padding="@dimen/pad_size"
                    android:text="@string/terms"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/pad_size" />
            </RelativeLayout>


        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>